refactor to keep compatibility with old java version (openjdk-11 tested)